# twitch-bot

./: .editorconfig  .env.example  .gitignore  pyproject.toml
.github/workflows/: ci.yml
app/: __main__.py  bot.py
app/exts/: greetings.py
scripts/: quality.sh  testing.sh
tests/unit/: test_bot.py
tests/unit/exts/: test_greetings_reply.py
